--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ dj-static==0.0.6
 django-toolbelt==0.0.1
 futures==3.0.3
 gunicorn==19.3.0
+psycopg2==2.6.1
 python-dateutil==2.4.2
 requests==2.8.1
 six==1.10.0
